<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="billSyncing">Bill Sending&#8230;Wait&#8230;</string>
    <string name="app_name">Kerosene</string>
    <string name="publicUrl">Change URL </string>
    <string name="unassociated">Device is Unassociated to any Store</string>
    <string name="fpsposapplication">KEROSENE BUNKER APPLICATION</string>
    <string name="errorUpgrade">Error in Upgrade.Contact Helpdesk</string>
    <string name="device_details">Device Details</string>
    <string name="tamil">தமிழ்</string>
    <string name="languageSelection">Select Language</string>
    <string name="languageSelectionTa">மொழித் தேர்வு</string>
    <string name="hr">hr</string>
    <string name="sync">Sync</string>
    <string name="min">min</string>
    <string name="accepted">Approved</string>
    <string name="stock_adjust_list_history">Stock Adjustment History</string>
    <string name="noComodity">No Commodity for this card</string>
    <string name="day">day</string>
    <string name="transit">Transit</string>
    <string name="sales">Continue</string>
    <string name="syncButton">Ready</string>
    <string name="correction_history_tv">Stock Adjustment</string>
    <string name="ack_product">Please Acknowledge all Products</string>
    <string name="dashboard">Dashboard</string>
    <string name="card_activation">Card Activation</string>
    <string name="card_registration">Card Registration</string>
    <string name="card_registration_confirm">Card Registration</string>
    <string name="check_details">Check details of Card Holder</string>
    <string name="stock_management">Stock Management</string>
    <string name="transactions">Transactions</string>
    <string name="close_sale">Close Sale</string>
    <string name="total_bill">Total Bills</string>
    <string name="totAmount">Total Amount</string>
    <string name="other_menus">Other Menu</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="openstock_name">OpenStock Name</string>
    <string name="card_activation_success">Card Activated Successfully</string>
    <string name="ration_card_number">RATIONCARD NUMBER</string>
    <string name="select_ration_card_number">SELECT RATIONCARD NUMBER</string>
    <string name="invalid_card_prefix">Enter correct district code</string>
    <string name="card_number_input">Enter last 4 digit </string>
    <string name="mob_number">MOBILE NUMBER</string>
    <string name="aRegisterNo">A-Register Number</string>
    <string name="card_activation_failed">Card Activation Failed.Please Try Again</string>
    <string name="welcome_view">Welcome,</string>
    <string name="last_login">Last Login :</string>
    <string name="logout">Logout</string>
    <string name="fps_profile">Kerosene Bunker Profile</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="enter_mobile">ENTER MOBILE NUMBER</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="enter_mobile_no">Enter 10 digit mobile number</string>
    <string name="fps_code">Kerosene Bunker Code  </string>
    <string name="sales_order">Sale Order</string>
    <string name="mobile_otp">Mobile OTP</string>
    <string name="success_activation">Card Activation Status</string>
    <string name="success_status">Success/Failure Status</string>
    <string name="sale_entry_activity">Sales Order - Entry</string>
    <string name="card_user_details">Card Details</string>
    <string name="sale_confirm_activity">Sales Order - Confirm</string>
    <string name="full_entitlements">Full Entitlement</string>
    <string name="commodity">Commodity</string>
    <string name="entitled_qty">Entitled Qty.</string>
    <string name="purchased_qty">Alr. Purc. Qty</string>
    <string name="availed_qty">Avail.Qty</string>
    <string name="qty_to_bill">Qty.to Bill</string>
    <string name="i_need_otp">I Need OTP</string>
    <string name="i_have_otp">I Have OTP</string>
    <string name="qr_based">QR Code Based</string>
    <string name="otp_based">OTP Based</string>
    <string name="ration_based">Ration Card Based</string>
    <string name="full">Full</string>
    <string name="printBill">Print</string>
    <string name="rate">Rate(\u20B9)</string>
    <string name="unsyncBills">Unsynched Bills </string>
    <string name="stock_not_available">Stock for this product is over</string>
    <string name="internalError">Internal Error</string>
    <string name="successInUpdate">Location Updated Successfully</string>
    <string name="crashmsg">Temporarily Service stopped</string>
    <string name="technicalFault">session timeout. Please try again or contact helpdesk</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="caution">Caution</string>
    <string name="bill_search">Bill Search</string>
    <string name="search">Search</string>
    <string name="loginBack">You can only log in back  </string>
    <string name="geofence_reason">You are away from the shop</string>
    <string name="geofence_done">the device has been blocked</string>
    <string name="timeDiff">Time difference between server and device </string>
    <string name="nextDay">next day</string>
    <string name="location">Location</string>
    <string name="store_type">Store Type</string>
    <string name="fps_code1">Kerosene Bunker Code</string>
    <string name="inward_register">Stock Inward Register</string>
    <string name="working_hours">Working Hours</string>
    <string name="invalid_qr">Invalid QR code</string>
    <string name="qr_exists">QR Code does not exist</string>
    <string name="mobile_exists">Mobile number does not exist</string>
    <string name="ration_exists">Ration Card number does not exist</string>
    <string name="sim_number">Sim Number</string>
    <string name="agency_name">Agency Name</string>
    <string name="continues">Do you want to continue ?</string>
    <string name="fencing_message">Device works within Store Limit</string>
    <string name="invalidRegNo">Invalid A Register number</string>
    <string name="notExistsRegNo">A Register number does not exists</string>
    <string name="emptyRegNo">A Register number is Empty</string>
    <string name="deviceId">Device No</string>
    <string name="entitlemnt_finished">Your entitlement has been finished</string>
    <string name="loginUserNameEmpty">Username should not be empty</string>
    <string name="invalidMobile">Invalid mobile number</string>
    <string name="loginPasswordEmpty">Password should not be empty</string>
    <string name="changeTime">Click ok to change time</string>
    <string name="loginButtonTxt">Login</string>
    <string name="headerAllPageEnglish">CIVIL  SUPPLIES  AND  CONSUMER  PROTECTION  DEPARTMENT</string>
    <string name="headerAllPage">உணவுப் பொருள் வழங்கல் மற்றும் நுகர்வோர் பாதுகாப்புத் துறை</string>
    <string name="noNetworkConnection">No Network Connection</string>
    <string name="error_otp_create">Error in Creating OTP</string>
    <string name="noRecordsFound">No Records Found</string>
    <string name="deviceRegistration">Device registered successfully.Please contact helpdesk for approval</string>
    <string name="loginButton">Login</string>
    <string name="noItemSelected">No items Selected</string>
    <string name="itemZero">Received Quantity should not blank</string>
    <string name="mobile_no_empty">Please Enter Mobile Number</string>
    <string name="no_connectivity">There is no connectivity / You are offline</string>
    <string name="invalid_card_no">Invalid Card Number</string>
    <string name="exceedsLimit">Quantity entered is more than remaining entitlement</string>
    <string name="cardBlocked">Card blocked.Contact HelpDesk</string>
    <string name="thresholdLimit">30</string>
    <string name="cardActivate">Card activation take one day time. Try tomorrow</string>
    <string name="loginInvalidUserPassword">Invalid Username or Password</string>
    <string name="titleActivityMain">ScanActivity</string>
    <string name="changeUrl">Change URL</string>
    <string name="restoreHead">Backup Kerosene Bunker database</string>
    <string name="titleActivityEntitlement">EntitlementActivity</string>
    <string name="serviceTimeout" tools:ignore="MissingTranslation">300000</string>
    <string name="hashMethod">SHA-256</string>
    <string name="hashIterations">1000</string>
    <string name="connectionRefused">Server Connection Error</string>
    <string name="saltSize">10</string>
    <string name="logoutString">Do you want to logout?</string>
    <string name="poolSize">16</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="rMN">RMN</string>
    <string name="login">Login</string>
    <string name="loginPageCopyright">Copyright \u00A9 2015 TNPDS | Help Desk - 1967 / 1800-425-5901</string>
    <string name="stock_inward_alert_msg">Your stock request has been approved and is dispatched. The stock is on transit to the FPS.</string>
    <string name="mobileOTP">OTP without QR</string>
    <string name="inputOTP">Enter OTP</string>
    <string name="rMobileOTP">Enter OTP </string>
    <string name="mobileOTPWrong">Wrong OTP</string>
    <string name="number_adult_cap">NO OF ADULTS</string>
    <string name="number_child_cap">NO OF CHILD</string>
    <string name="retryCount">Retry count exceeded</string>
    <string name="total">Total</string>
    <string name="activate">Activate</string>
    <string name="stock_inward_tv">Stock Inward</string>
    <string name="stock_status_tv">Stock Status</string>
    <string name="opening_stock">Opening Stock</string>
    <string name="inward_qty">Inward Qty</string>
    <string name="sale_qty">Sale Qty</string>
    <string name="current_stock">Current Stock</string>
    <string name="close">Close</string>
    <string name="stock_adjust">Stock Adjustment</string>
    <string name="regenerate_otp">Regenerate OTP</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="password">Password</string>
    <string name="rMobile">Registered Mobile </string>
    <string name="product">Commodity</string>
    <string name="quantity">Qty. to Bill</string>
    <string name="receivedQuantity">Received Quantity</string>
    <string name="viewString">View</string>
    <string name="cardActivated">Card activated</string>
    <string name="ration_card_number1">Ration Card Number</string>
    <string name="card_no">Card Number</string>
    <string name="cardAlreadyActivated">Card already activated</string>
    <string name="omneAgate">Powered By </string>
    <string name="titleActivitySalesSubmission">SalesSummaryActivity</string>
    <string name="title_activity_beneficiary_activation">BeneficiaryActivationActivity</string>
    <string name="externalStorageNotAvailable">Sdcard is not available</string>
    <string name="externalStorageNotWritable">Sdcard is not writable</string>
    <string name="noFreeInSdcard">No free space available in sdcard</string>
    <string name="noFileSdcard"> No file in sdcard back up</string>
    <string name="backupFolderNot"> backup folder is not created</string>
    <string name="cylinderHints">NO OF CYLINDERS</string>
    <string name="scan_qr">Scan QR</string>
    <string name="or">Or</string>
    <string name="bills">Bills</string>
    <string name="userName">Login Id</string>
    <string name="fpsInvardDetailProductName">Product</string>
    <string name="fpsInvardDetailQuantity">Quantity</string>
    <string name="fpsIDSubmit">Submit</string>
    <string name="fpsIDCancel">Cancel</string>
    <string name="fpsStockAdjustmentProductName">Commodity</string>
    <string name="fpsStockAdjustmentcurrentStock">Current Stock</string>
    <string name="fpsStockAdjustmentQuantity">Adjust Quantity</string>
    <string name="fpsStockAdjustmentOperation">Adjust Operation</string>
</resources>