<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fpsIntentRequestLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="#07C8ff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fRILabel"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fpsInvardDetailProductLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fpsInvardDetailProductName"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fpsInvardDetailQuantityLabel"
                    android:layout_width="200dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fpsInvardDetailQuantity"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/listView_fps_intent_request_product"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fpsIntentRequestLinearLayout"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/btnfpsIDSubmit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listView_fps_intent_request_product"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login"
                android:onClick="onSubmit"
                android:text="@string/fpsIDSubmit"
                android:textColor="#ffffff" />

            <!--android:layout_alignLeft="@+id/listView_fps_intent_request_product"
            android:layout_below="@+id/listView_fps_intent_request_product"
            android:layout_marginLeft="100dp"
        -->
            <Button
                android:id="@+id/btnfpsIDCancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listView_fps_intent_request_product"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/btnfpsIDSubmit"
                android:background="@drawable/button_login"
                android:onClick="onCancel"
                android:text="@string/fpsIDCancel"
                android:textColor="#ffffff" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
