<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingBottom="11.25dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:id="@+id/fpsStockAdjustmentLinearLayoutPQRQ"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15dp"
                android:background="#07C8ff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fpsStockAdjustmentProductLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/fpsStockAdjustmentProductName"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fpsStockAdjustmentCurrentStockLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fpsStockAdjustmentcurrentStock"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fpsStockAdjustmentQuantityLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fpsStockAdjustmentQuantity"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fpsStockAdjustmentOperationLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fpsStockAdjustmentOperation"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/listView_fpsStockAdjustment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fpsStockAdjustmentLinearLayoutPQRQ"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listView_fpsStockAdjustment"

                android:layout_centerInParent="true"
                android:layout_marginTop="11.25dp">

                <Button
                    android:id="@+id/btnfpsStockAdjustmentCancel"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:background="#0288D1"
                    android:onClick="onCancel"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/btnfpsStockAdjustmentSubmit"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="7.5dp"
                    android:layout_toRightOf="@+id/btnfpsStockAdjustmentCancel"
                    android:background="@drawable/button_login"
                    android:onClick="onSubmit"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <!-- <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:background="#0000ff"
         android:id="@+id/relativeLayout2">

         <TextView
             android:id="@+id/login_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="@string/omneAgate"
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold" />
     </RelativeLayout>-->

</RelativeLayout>
